# entity-derive-example

./: Cargo.toml  README.md
ddd-core/: Cargo.toml
ddd-core/src/: lib.rs
ddd-derive/: Cargo.toml
ddd-derive-tests/: Cargo.toml
ddd-derive-tests/tests/entity/: empty_struct_entity.rs  empty_struct_entity.stderr  enum_entity.rs  enum_entity.stderr  mod.rs  named_struct_entity.rs  named_struct_entity_with_generics.rs  named_struct_entity_with_generics.stderr  unit_struct_entity.rs  unit_struct_entity.stderr  unnamed_struct_entity.rs  unnamed_struct_entity.stderr
ddd-derive/src/: entity.rs  lib.rs
ddd-with-macros/: Cargo.toml
ddd-with-macros/src/domain/: customer.rs  mod.rs  user.rs
ddd-without-macros/: Cargo.toml
ddd-without-macros/src/: main.rs
ddd-without-macros/src/domain/: customer.rs  user.rs
