[package]
name = "ddd-derive"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
ddd-core = { path = "../ddd-core" }
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
anyhow = "1.0"